name:          timerep
version:       2.0.0
category:      Web, Time
synopsis:      Parse and display time according to some RFCs (RFC3339, RFC2822, RFC822)
description:
    .
    Parse and display time according to some RFC's.
    .
    Supported:
    .
      * RFC822 <http://www.ietf.org/rfc/rfc0822.txt>
      * RFC2822 <http://www.ietf.org/rfc/rfc2822.txt>
      * RFC3339 <http://www.ietf.org/rfc/rfc3339.txt>
    .
    Special thanks to Koral for all the suggestions and help in solving some bugs
    .
build-type:    Simple
maintainer:    Hugo Daniel Gomes <mr.hugo.gomes@gmail.com>
author:        Hugo Daniel Gomes <mr.hugo.gomes@gmail.com>
copyright:     Hugo Daniel Gomes
cabal-version: >= 1.8
license:       BSD3
license-file:  LICENSE
source-repository head
  type:     git
  location: git://github.com/HugoDaniel/RFC3339.git

library
  build-depends:
    base < 5,
    monoid-subclasses >= 0.4.1,
    text,
    time >= 1.5,
    attoparsec

  exposed-modules:
    Data.Time.RFC3339
    Data.Time.RFC2822
    Data.Time.RFC822

  other-modules:
    Data.Time.Util

test-suite Tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base < 5,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    time >= 1.5,
    timerep >= 2
